[package]
name = "systemd-udp-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.48"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.5"
listenfd = "1.0"
log = "0.4"
tokio = { version = "1.35", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }